
	* flumotion/component/bouncers/plug.py:
	Added a comment to remember the new expireKeycardIds
	API has not been duplicated to the plug version
	of the bouncer.

2008-10-22  Sebastien Merle  <sebastien@fluendo.com>

	* flumotion/component/bouncers/bouncer.py:
	Accept calls to expireKeycardIds that return None,
	because the current tests do not support return values.

2008-10-20  Sebastien Merle  <sebastien@fluendo.com>

	* flumotion/component/base/http.py:
        Do not call back the bouncer when told to expire some keycard.
        Done by cleaning up all keycard lists when expiring a keycard,
        and not calling the bouncer in cleanAuth when the keycard
        has previously been cleaned up.
        Fixes #1155

2008-10-16  Sebastien Merle  <sebastien@fluendo.com>

	* flumotion/component/base/http.py:
	* flumotion/component/bouncers/bouncer.py:
	* flumotion/component/consumers/httpstreamer/httpstreamer.py:
	* flumotion/component/misc/httpserver/httpserver.py:
	* flumotion/manager/component.py:
	Added expireKeycardIds method to the base Bouncer class,
	the methods for the manager to forward the calls,
	and fixed the consumers to use the new method.

2008-10-16  Sebastien Merle  <sebastien@fluendo.com>

	* flumotion/manager/component.py:
	Added to the component avatar the method to forward
	keep-alive calls to the bouncers.
	Fixes #895

2008-10-15  Jan Urbanski  <jurbanski@flumotion.com>

	* common/Makefile.am:
	Add flumotion-trial to EXTRA_DIST in common/Makefile.am.

2008-10-15  Pedro Gracia  <pedro@flumotion.com>

	* flumotion/monitor/nagios/stream.py:
	Fixed an error that makes this script fail with playlists.

2008-10-15  Pedro Gracia  <pedro@flumotion.com>

	* po/es.po:
	Update Spanish translation.

2008-10-14  Jan Urbanski  <jurbanski@flumotion.com>

	* Makefile.am:
	Temporarily add misc/flumotion-trial to CLEANFILES, because
	flumotion-trial.in has been moved from misc/ to common/ which might
	have left a stale generated file in old trees.
